--- a/diceGame.html
+++ b/diceGame.html
@@ -10,7 +10,7 @@
     <div class="game-container">
         <h1>Simple Dice Game</h1>
         <div class="dice">
-            <p class="dice-result" id="RollResult">Roll The Dice!</p>
+            <p class="diceResult" id="rollResult">Roll The Dice!</p>
             <button id="rollButton">Roll</button>
         </div>
     </div>
